# uil

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
.github/workflows/: windows-installer.yml
packaging/windows/: uil.iss
resources/styles/: vscode.qss
resources/windows/: uil.rc.in
scripts/windows/: build-inno-installer.sh  deploy-msys2.sh  project-version.sh  write-release-notes.sh
src/: AppController.cpp  AppController.hpp  main.cpp
src/cache/: SlideCache.cpp  SlideCache.hpp  SlideCacheKey.hpp
src/media/: VideoFrameBuffer.cpp  VideoFrameBuffer.hpp  VideoFrameExtractor.cpp  VideoFrameExtractor.hpp
src/package/: UilPackage.cpp  UilPackage.hpp
src/pdf/: PdfBackend.hpp  QtPdfBackend.cpp  QtPdfBackend.hpp
src/render/: RenderScheduler.cpp  RenderScheduler.hpp
src/ui/: AudienceWindow.cpp  AudienceWindow.hpp  FontAwesome.cpp  FontAwesome.hpp  PresenterWindow.cpp  PresenterWindow.hpp
src/util/: DocumentHash.cpp  DocumentHash.hpp  ImageUtil.cpp  ImageUtil.hpp  PdfMediaDetector.cpp  PdfMediaDetector.hpp
